small fix for image on small screens

--- a/pages/style/main_page.css
+++ b/pages/style/main_page.css
@@ -72,6 +72,7 @@
         padding-top: 1%;
         object-fit: cover;
         width:100%;
+        height: 37vh !important;
     }
     
     .main_info_call{
